# RobotTorqueAnalyze

./: .gitmodules  README.md
src/torque_compute/: package.xml  setup.cfg  setup.py
src/torque_compute/torque_compute/: plan_printer.py
src/xclimbot_config/: .setup_assistant  CMakeLists.txt  package.xml
src/xclimbot_config/config/: X-Climbot.ros2_control.xacro  X-Climbot.srdf  X-Climbot.urdf.xacro  initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/xclimbot_config/launch/: demo.launch.py  gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/xclimbot_gravity/: package.xml  setup.cfg  setup.py
src/xclimbot_gravity/xclimbot_gravity/: gravity_node.py  gravity_visualize.py
src/xclimbot_model/: CMakeLists.txt  package.xml
src/xclimbot_model/launch/: display.launch  gazebo.launch
src/xclimbot_model/meshes/: base_link.STL  l1.STL  l2.STL  l3.STL  l4.STL  l5.STL  l6.STL
src/xclimbot_model/urdf/: X-Climbot.csv  X-Climbot.urdf
